Add annotation, introduction, 1st and 2nd sections

--- a/references.bib
+++ b/references.bib
@@ -28,7 +28,7 @@
 @online{TexturePacker,
     title        = {TexturePacker},
     organization = {CodeAndWeb GmbH},
-    url          = {https://www.codeandweb.com/about},
+    url          = {https://www.codeandweb.com/texturepacker},
     urldate      = {20.01.2021},
     language     = {english},
 }
@@ -39,4 +39,102 @@
     url          = {https://habr.com/ru/company/playrix/blog/306554/},
     urldate      = {20.01.2021},
     language     = {russian},
+}
+
+@online{Spine,
+    title        = {Spine in depth},
+    organization = {Esoteric Software},
+    url          = {http://esotericsoftware.com/spine-in-depth},
+    urldate      = {20.01.2021},
+    language     = {english},
+}
+
+@article{Heuristic1,
+    title        = {An Efficient Heuristic Approach for Irregular Cutting Stock Problem in Ship Building Industry},
+    author       = {Yan-xin Xu},
+    language     = {english},
+}
+
+@article{Heuristic2,
+    title        = {Matheuristics for the irregular bin packing problem with free rotations},
+    author       = {A. Martinez-Sykora and R. Alvarez-Valdes and J. A. Bennel and R. Ruiz and J. M. Tamarit b},
+    language     = {english},
+}
+
+@article{Heuristic3,
+    title        = {An effective heuristic for the two-dimensional irregular bin packing problem},
+    author       = {Eunice López-Camacho and Gabriela Ochoa and Hugo Terashima-Marín and Edmund K. Burke},
+    language     = {english},
+}
+
+@article{NFP1,
+    title        = {Algorithms for 2D Nesting Problem Based on the No-Fit Polygon},
+    author       = {D. Domović and T. Rolich and D. Grundler and S. Bogović},
+    language     = {english},
+}
+
+@article{NFP2,
+    title        = {Irregular Packing for Mobile Game Texture Atlases},
+    author       = {Jarkko Pöyry},
+    language     = {english},
+}
+
+@article{Genetica1,
+    title        = {On genetic algorithms for the packing of polygons},
+    author       = {Stefan Jakobs},
+    language     = {english},
+}
+
+@article{PSO1,
+    title        = {Ant Colony Optimisation and Local Search for Bin Packing and Cutting Stock Problems},
+    author       = {John Levine and Frederick Ducatelle},
+    language     = {english},
+}
+
+@article{PSO2,
+    title        = {Effectiveness of FireFly Algorithm in solving Bin Packing Problem},
+    author       = {R.yesodha and T.Amudha},
+    language     = {english},
+}
+
+@article{TheoPavlidis,
+    title        = {Algorithms for Graphics and Image Processing},
+    author       = {Pavlidis, T.},
+    language     = {english},
+}
+
+@article{MoorNeighbor,
+    title        = {Grids, Connectivity and Contour Tracing},
+    author       = {Toussaint, G.},
+    language     = {english},
+}
+
+@article{RadialSweep,
+    title        = {Algorithms for Graphics and Image Processing},
+    author       = {Reddy, P.R. and Amarnadh, V. and Bhaskar, M},
+    language     = {english},
+}
+
+@article{RunTypeDirectionCode,
+    title        = {Contour representation of binary images using run-type direction codes},
+    author       = {Miyatake, T. and Matsushima, H. and Ejiri, M.},
+    language     = {english},
+}
+
+@article{RunTypeDirectionCode,
+    title        = {Contour following and reconstruction of binary images stored in run format},
+    author       = {Shoji, K. and Miyamichi, J. and Hirano, K},
+    language     = {english},
+}
+
+@article{VisvalingamWhyatt,
+    title        = {Line generalisation by repeated elimination of points},
+    author       = {Visvalingam, M. and Whyatt, Duncan},
+    language     = {english},
+}
+
+@article{DouglasPeucker,
+    title        = {Algorithms for the reductions of the number of points required to represent a digitised line or its caricature},
+    author       = {Douglas, D.H. and Peucker, T.K.},
+    language     = {english},
 }
