Add more about poligonalization and packing

--- a/presentation.tex
+++ b/presentation.tex
@@ -18,7 +18,7 @@
 Руководитель:\\
 Старший преподаватель кафедры информатики, математического и компьютерного моделирования\\
 Александр Сергеевич Кленин}
-\date{}
+\date{23 февраля 2021}
 \usetheme[progressbar=frametitle, numbering=fraction]{metropolis}
 \makeatletter
         \setlength{\metropolis@progressinheadfoot@linewidth}{2pt}
@@ -115,7 +115,6 @@
             \item Применение минимальных валидных преобразований
             \item Мердж полигонов
             \item Удаление дыр
-            \item Растяжение по фрейму
         \end{itemize}
         \begin{figure}[H]
             \centering
@@ -152,6 +151,20 @@
                 \includegraphics[scale=0.9]{images/sides_intersection.png}
                 \caption{Пересечение 2 сторон}
             \end{subfigure}
+        \end{figure}
+    \end{frame}
+    \begin{frame}
+        \frametitle{Аппроксимация контура. Мердж полигонов}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.8\linewidth, keepaspectratio]{merge.png}
+        \end{figure}
+    \end{frame}
+    \begin{frame}
+        \frametitle{Аппроксимация контура. Удаление дыр}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.8\linewidth, keepaspectratio]{remove_hole.png}
         \end{figure}
     \end{frame}
     \begin{frame}
