--- a/thesis.tex
+++ b/thesis.tex
@@ -54,7 +54,7 @@
     Для того чтобы уменьшить количество вызовов на отрисовку текстуры пакуются в текстурные атласы. Чем меньше атласов на то же самое количество текстур, тем:
     \begin{itemize}
         \item Игра занимает меньший размер;
-        \item Происходит меньше вызовов на отрисовка (меньше нагрузка на видеокарту);
+        \item Происходит меньше вызовов на отрисовку (меньше нагрузка на видеокарту);
         \item Меньше расходуется видеопамяти.
     \end{itemize}
     Для упаковки текстур в игровом движке Citrus используется жадный алгоритм. Текстуры пакуются прямоугольной рамкой. Полигонализация текстур способствует уменьшению занимаемой площади, а значит увеличивает плотность упаковки, уменьшает количество атласов.
@@ -69,7 +69,7 @@
         \item Время упаковки не должно <<слишком сильно>> увеличиться.
     \end{itemize}
     \section{Второй раздел(глава)}
-    Блаблабла
+    ...
     \subsection{Выделение контура}
     Алгоритмы выделения контура можно разделить на 3 типа: обход попиксельно, обход повершинно, run-data.
     \subsubsection{Обход попиксельно}
@@ -113,6 +113,18 @@
                 \caption{Пересечение 2 сторон}
             \end{subfigure}
         \end{figure}
+    \subsubsection{Мердж полигонов}
+    Рассматриваются все пары полигонов для каждого уровня иерархии. Для каждой пары рассматриваются пары подряд идущих вершин и возможность их соединения. Выбирается пара с минимальным по площади соединением
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.8\linewidth, keepaspectratio]{images/merge.png}
+    \end{figure}
+    \subsubsection{Удаление дыр}
+    На стадии удаления дыр удаляется дыра, которая находится наиболее глубоко в иерархии. Из всех таких дыр удаляется та, которая имеет большее число вершин.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.8\linewidth, keepaspectratio]{images/remove_hole.png}
+    \end{figure}
     \subsubsection{Бэкэнд для операций}
     Для проверки преобразований и их выполнения используется триангуляция Делоне\cite{Delaunay} из бакалаврской работы, также сделанной по заказу студии <<Game Forest>> . Жесткими ребрами задаются границы полигонов. Операцией вставки структурных ребер проверяется возможность преобразования. Преобразования применяются при помощи операций вставки и удаления вершин, а также вставки структурных ребер. Данный подход позволил сильно снизить время на разработку и отладку сложного математического кода, для которого было бы сложнее добиться нужной асимптотики.
     \subsection{Упаковка}
